--- a/app/src/main/res/layout/activity_edit_message.xml
+++ b/app/src/main/res/layout/activity_edit_message.xml
@@ -5,6 +5,7 @@
     android:id="@+id/activity_edit_message"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     android:orientation="vertical"
     tools:context="com.shqtn.wonong.ui.activity.EditMessageActivity">
 
