--- a/app/src/main/res/layout/activity_goods_list.xml
+++ b/app/src/main/res/layout/activity_goods_list.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:fitsSystemWindows="true"
     tools:context="com.shqtn.wonong.ui.activity.GoodsListActivity">
 
     <com.shqtn.wonong.ui.widget.TitleView
